Pager text alignment fix

--- a/src/app/components/pager/pager.component.scss
+++ b/src/app/components/pager/pager.component.scss
@@ -27,7 +27,7 @@
 }
 
 .pagination-text {
-  text-align: center;
+  text-align: left;
   white-space: nowrap;
 }
 
